@@ -6,7 +6,12 @@ import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Formatter;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.HashMap;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -15,20 +20,24 @@ import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.dialogs.ErrorDialog;
+import org.eclipse.jface.dialogs.IDialogSettings;
 import org.eclipse.jface.viewers.ArrayContentProvider;
 import org.eclipse.jface.viewers.CheckboxTableViewer;
 import org.eclipse.jface.viewers.ColumnLabelProvider;
+import org.eclipse.jface.viewers.ColumnPixelData;
 import org.bndtools.core.ui.StickyToolTipSupport;
-import org.eclipse.jface.viewers.ColumnWeightData;
 import org.eclipse.jface.viewers.DoubleClickEvent;
 import org.eclipse.jface.viewers.IDoubleClickListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.TableLayout;
 import org.eclipse.jface.viewers.TableViewerColumn;
+import org.eclipse.jface.viewers.Viewer;
+import org.eclipse.jface.viewers.ViewerFilter;
 import org.eclipse.jface.window.Window;
 import org.eclipse.jface.wizard.Wizard;
 import org.eclipse.jface.wizard.WizardPage;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.graphics.GC;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.graphics.Rectangle;
@@ -69,12 +78,21 @@ import bndtools.util.ui.UI;
  */
 public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWizard {
 
+	private static final String		SETTINGS_SECTION			= "NewWorkspaceWizard";
+	private static final String		SETTING_CLEAN				= "clean";
+	private static final String		SETTING_SWITCH_WORKSPACE	= "switchWorkspace";
+	private static final String		SETTING_SHOW_ARCHIVED		= "showArchived";
+	private static final String		SETTING_UPDATE_WORKSPACE	= "updateWorkspace";
+	private static final Point		MINIMUM_DIALOG_SIZE			= new Point(880, 480);
+
 	static final Logger				log					= LoggerFactory.getLogger(NewWorkspaceWizard.class);
 
 	final Model						model;
 	final UI<Model>					ui;
 	final NewWorkspaceWizardPage	page				= new NewWorkspaceWizardPage();
 	final FragmentTemplateEngine	templates;
+	final Set<String>					loadingTemplateIndexes	= new HashSet<>();
+	final Map<String, List<TemplateInfo>>	templateIndexes			= new HashMap<>();
 
 	final static Image				verified			= Icons.image("icons/tick.png", false);
 	final static Image				verifiedGreyedOut	= new Image(Display.getDefault(), verified, SWT.IMAGE_DISABLE);
@@ -85,13 +103,37 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 		this.model = new Model(workspace);
 		this.ui = new UI<>(model);
 		templates = new FragmentTemplateEngine(workspace);
+		IDialogSettings workbenchSettings = Plugin.getDefault()
+			.getDialogSettings();
+		IDialogSettings section = workbenchSettings.getSection(SETTINGS_SECTION);
+		if (section == null) {
+			section = workbenchSettings.addNewSection(SETTINGS_SECTION);
+		}
+		setDialogSettings(section);
+
+		if (section.get(SETTING_CLEAN) != null) {
+			model.clean = section.getBoolean(SETTING_CLEAN);
+		}
+		if (section.get(SETTING_SWITCH_WORKSPACE) != null) {
+			model.switchWorkspace = section.getBoolean(SETTING_SWITCH_WORKSPACE);
+		}
+		if (section.get(SETTING_SHOW_ARCHIVED) != null) {
+			model.showArchived = section.getBoolean(SETTING_SHOW_ARCHIVED);
+		}
+		if (section.get(SETTING_UPDATE_WORKSPACE) != null) {
+			model.updateWorkspace(section.getBoolean(SETTING_UPDATE_WORKSPACE));
+		} else {
+			model.updateWorkspace(true);
+		}
+
 		try {
 			Job job = Job.create("load index", mon -> {
 				try {
 					for (String uri : new BndPreferences().getWorkspaceTemplateIndexes()) {
-						templates.read(new URL(uri))
-							.unwrap()
-							.forEach(templates::add);
+						List<TemplateInfo> indexTemplates = templates.read(new URL(uri))
+							.unwrap();
+						indexTemplates.forEach(templates::add);
+						templateIndexes.put(URI.create(uri).normalize().toString(), indexTemplates);
 					}
 					Parameters p = workspace.getMergedParameters(Constants.WORKSPACE_TEMPLATES);
 					templates.read(p)
@@ -160,6 +202,7 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 		}
 
 		if (model.valid == null) {
+			saveDialogSettings();
 			ui.write(() -> {
 				TemplateUpdater updater = templates.updater(model.location, model.selectedTemplates);
 				model.execute(updater);
@@ -168,6 +211,27 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 		} else
 			return false;
 
+	}
+
+	@Override
+	public void dispose() {
+		saveDialogSettings();
+		super.dispose();
+	}
+
+	@Override
+	public Point getMinimumWizardSize() {
+		return MINIMUM_DIALOG_SIZE;
+	}
+
+	private void saveDialogSettings() {
+		IDialogSettings settings = getDialogSettings();
+		if (settings != null) {
+			settings.put(SETTING_CLEAN, model.clean);
+			settings.put(SETTING_SWITCH_WORKSPACE, model.switchWorkspace);
+			settings.put(SETTING_SHOW_ARCHIVED, model.showArchived);
+			settings.put(SETTING_UPDATE_WORKSPACE, model.updateWorkspace);
+		}
 	}
 
 
@@ -208,12 +272,67 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 			switchWorkspace.setText("Show workspace select dialog to switch to new workspace after finish");
 			switchWorkspace.setLayoutData(new GridData(SWT.LEFT, SWT.CENTER, false, false, 8, 1));
 
+			Button showArchived = new Button(container, SWT.CHECK);
+			showArchived.setText("Show archived");
+			showArchived.setLayoutData(new GridData(SWT.LEFT, SWT.CENTER, false, false, 8, 1));
+
+			Label filterLabel = new Label(container, SWT.NONE);
+			filterLabel.setText("Filter");
+			filterLabel.setLayoutData(new GridData(SWT.LEFT, SWT.CENTER, false, false, 1, 1));
+
+			Text filterText = new Text(container, SWT.BORDER | SWT.SEARCH | SWT.ICON_CANCEL);
+			filterText.setMessage("glob pattern, e.g. *eclipse*");
+			GridData filterTextLayoutData = new GridData(SWT.LEFT, SWT.CENTER, false, false, 7, 1);
+			GC gc = new GC(filterText);
+			filterTextLayoutData.widthHint = gc.stringExtent("MMMMMMMMMMMMMMMMMMMMMMMMMMMMMM").x;
+			gc.dispose();
+			filterText.setLayoutData(filterTextLayoutData);
+
 			CheckboxTableViewer selectedTemplates = CheckboxTableViewer.newCheckList(container,
 				SWT.BORDER | SWT.FULL_SELECTION);
 			StickyToolTipSupport.enableFor(selectedTemplates);
 			selectedTemplates.setContentProvider(ArrayContentProvider.getInstance());
+			selectedTemplates.addFilter(new ViewerFilter() {
+				@Override
+				public boolean select(Viewer viewer, Object parentElement, Object element) {
+					if (model.showArchived) {
+						return true;
+					}
+					if (element instanceof TemplateInfo ti) {
+						return !ti.archived();
+					}
+					return true;
+				}
+			});
+			selectedTemplates.addFilter(new ViewerFilter() {
+				@Override
+				public boolean select(Viewer viewer, Object parentElement, Object element) {
+					String glob = filterText.getText()
+						.trim();
+					if (glob.isEmpty()) {
+						return true;
+					}
+					if (!(element instanceof TemplateInfo ti)) {
+						return true;
+					}
+					Pattern pattern = Pattern.compile(globToRegex(glob), Pattern.CASE_INSENSITIVE);
+					String author = ti.isOfficial() ? "bndtools (Official)"
+						: ti.id()
+							.organisation() + " (3rd Party)";
+					return pattern.matcher(ti.name())
+						.matches()
+						|| pattern.matcher(ti.description())
+							.matches()
+						|| pattern.matcher(author)
+							.matches();
+				}
+			});
+			filterText.addModifyListener(e -> selectedTemplates.refresh());
 			Table table = selectedTemplates.getTable();
-			table.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true, 6, 10));
+			GridData tableLayoutData = new GridData(SWT.FILL, SWT.FILL, true, true, 6, 10);
+			tableLayoutData.widthHint = 820;
+			tableLayoutData.heightHint = 360;
+			table.setLayoutData(tableLayoutData);
 			TableLayout tableLayout = new TableLayout();
 			table.setLayout(tableLayout);
 			table.setHeaderVisible(true);
@@ -231,6 +350,23 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 				}
 			});
 
+			TableViewerColumn checkboxColumn = new TableViewerColumn(selectedTemplates, SWT.NONE);
+			checkboxColumn.setLabelProvider(new ColumnLabelProvider());
+
+			TableViewerColumn indexColumn = new TableViewerColumn(selectedTemplates, SWT.NONE);
+			indexColumn.getColumn()
+				.setText("#");
+			indexColumn.setLabelProvider(new ColumnLabelProvider() {
+
+				@Override
+				public String getText(Object element) {
+					if (element instanceof TemplateInfo ti) {
+						return String.valueOf(localIndex(ti));
+					}
+					return super.getText(element);
+				}
+			});
+
 			TableViewerColumn nameColumn = new TableViewerColumn(selectedTemplates, SWT.NONE);
 			nameColumn.getColumn()
 				.setText("Name");
@@ -239,7 +375,7 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 				@Override
 				public String getText(Object element) {
 					if (element instanceof TemplateInfo ti) {
-						return ti.name();
+						return ti.name() + (ti.archived() ? " (archived)" : "");
 					}
 					return super.getText(element);
 				}
@@ -281,6 +417,9 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 				@Override
 				public Image getImage(Object element) {
 					if (element instanceof TemplateInfo ti) {
+						if (ti.archived()) {
+							return verifiedGreyedOut;
+						}
 						boolean officialOrSHA = ti.isOfficial() || ti.isCommitSHA();
 						return officialOrSHA ? verified : verifiedGreyedOut;
 					}
@@ -298,17 +437,7 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 				@Override
 				public String getText(Object element) {
 					if (element instanceof TemplateInfo ti) {
-						List<TemplateInfo> reqs = NewWorkspaceWizard.this.templates
-							.resolveRequirements(Collections.singletonList(ti));
-
-						long num3rdParty = reqs != null && reqs.size() > 1 ? reqs.stream()
-							.filter(rti -> !rti.isOfficial())
-							.count() : 0;
-
-						return reqs != null && reqs.size() > 1
-							? String.valueOf(reqs.size() - 1)
-								+ (num3rdParty > 0 ? " (" + num3rdParty + " 3rd Party)" : "")
-							: "0";
+						return requiredIndices(ti);
 					}
 					return super.getText(element);
 				}
@@ -328,11 +457,12 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 					return super.getToolTipText(element);
 				}
 			});
-
-			tableLayout.addColumnData(new ColumnWeightData(1, 200, false));
-			tableLayout.addColumnData(new ColumnWeightData(10, 460, true));
-			tableLayout.addColumnData(new ColumnWeightData(20, 100, true));
-			tableLayout.addColumnData(new ColumnWeightData(30, 50, true));
+			tableLayout.addColumnData(new ColumnPixelData(20, false));
+			tableLayout.addColumnData(new ColumnPixelData(30, false));
+			tableLayout.addColumnData(new ColumnPixelData(120, false));
+			tableLayout.addColumnData(new ColumnPixelData(460, false));
+			tableLayout.addColumnData(new ColumnPixelData(120, false));
+			tableLayout.addColumnData(new ColumnPixelData(60, false));
 
 			Button addButton = new Button(container, SWT.PUSH);
 			addButton.setText("+");
@@ -343,23 +473,24 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 			formText.setText("Double click to open the fragment template Github-Repo in your browser.", false, false);
 			formText.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, true, false, 6, 1));
 
-			model.updateWorkspace(true);
 			ui.u("location", model.location, UI.text(location)
 				.map(File::getAbsolutePath, File::new));
 			ui.u("clean", model.clean, UI.checkbox(clean));
+			ui.u("switchWorkspace", model.switchWorkspace, UI.checkbox(switchWorkspace));
+			ui.u("showArchived", model.showArchived, UI.checkbox(showArchived))
+				.bind(v -> selectedTemplates.refresh());
 			ui.u("updateWorkspace", model.updateWorkspace, UI.checkbox(useEclipseWorkspace))
 				.bind(v -> location.setEnabled(!v))
 				.bind(v -> browseButton.setEnabled(!v))
 				.bind(v -> switchWorkspace.setEnabled(!v))
 				.bind(v -> clean.setEnabled(!v))
 				.bind(v -> setTitle(
-					v ? "Update Workspace with template fragment" : "Create New Workspace from template fragment"))
-				.bind(v -> setWindowTitle(v ? "Update Workspace" : "Create New Workspace"));
+					v ? "Update Workspace from template fragment" : "Create New Workspace from template fragment"))
+				.bind(v -> setWindowTitle(v ? "Update Workspace from template fragment" : "Create New Workspace"));
 
 			ui.u("valid", model.valid, this::setErrorMessage);
 			ui.u("error", model.error, this::setErrorMessage);
 			ui.u("valid", model.valid, v -> setPageComplete(v == null));
-			ui.u("switchWorkspace", model.switchWorkspace, UI.checkbox(switchWorkspace));
 			ui.u("templates", model.templates, l -> selectedTemplates.setInput(l.toArray()));
 			ui.u("selectedTemplates", model.selectedTemplates, UI.widget(selectedTemplates)
 				.map(List::toArray, this::toTemplates));
@@ -368,29 +499,24 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 			UI.checkbox(browseButton)
 				.subscribe(this::browseForLocation);
 
-			centerShell();
+			configureShellSize();
 			ui.update();
 		}
 
-		private void centerShell() {
+		private void configureShellSize() {
 			Shell shell = getShell();
-			shell.setSize(840, 480);
+			shell.setMinimumSize(MINIMUM_DIALOG_SIZE);
 			Shell parent = (Shell) shell.getParent();
 			if (parent != null) {
-				Rectangle parentBounds = parent.getBounds();
-				Point shellSize = shell.getSize();
-				int x = parentBounds.x + (parentBounds.width - shellSize.x) / 2;
-				int y = parentBounds.y + (parentBounds.height - shellSize.y) / 2;
-				shell.setLocation(x, y);
-			} else {
-				// If no parent, center on the display
-				Rectangle displayBounds = shell.getDisplay()
-					.getPrimaryMonitor()
-					.getBounds();
-				Point shellSize = shell.getSize();
-				int x = (displayBounds.width - shellSize.x) / 2;
-				int y = (displayBounds.height - shellSize.y) / 2;
-				shell.setLocation(x, y);
+				Rectangle parentBounds = parent.getClientArea();
+				shell.setMaximumSize(parentBounds.width, parentBounds.height);
+				Point preferredSize = shell.computeSize(SWT.DEFAULT, SWT.DEFAULT, true);
+				Point shellSize = new Point(Math.min(preferredSize.x, parentBounds.width),
+					Math.min(preferredSize.y, parentBounds.height));
+				shell.setSize(shellSize);
+				Point parentOrigin = parent.toDisplay(parentBounds.x, parentBounds.y);
+				shell.setLocation(parentOrigin.x + (parentBounds.width - shellSize.x) / 2,
+					parentOrigin.y + (parentBounds.height - shellSize.y) / 2);
 			}
 		}
 
@@ -398,6 +524,47 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 			return Stream.of(selection)
 				.map(o -> (TemplateInfo) o)
 				.toList();
+		}
+
+		int localIndex(TemplateInfo template) {
+			return model.templates.indexOf(template) + 1;
+		}
+
+		String requiredIndices(TemplateInfo template) {
+					List<TemplateInfo> requirements = NewWorkspaceWizard.this.templates
+						.resolveRequirements(Collections.singletonList(template));
+					if (requirements.size() <= 1) {
+				return "-";
+			}
+					String indices = requirements.stream()
+						.filter(required -> !required.equals(template))
+						.map(this::localIndex)
+						.map(String::valueOf)
+				.collect(Collectors.joining(", "));
+			return indices;
+		}
+
+		// converts a shell-style glob (* and ?) into a case-insensitive regex; plain text without glob
+		// special characters is treated as a substring search
+		static String globToRegex(String glob) {
+			boolean hasWildcard = glob.indexOf('*') >= 0 || glob.indexOf('?') >= 0;
+			StringBuilder sb = new StringBuilder();
+			if (!hasWildcard) {
+				sb.append(".*");
+			}
+			for (char c : glob.toCharArray()) {
+				switch (c) {
+					case '*' -> sb.append(".*");
+					case '?' -> sb.append('.');
+					case '.', '(', ')', '+', '|', '^', '$', '@', '%', '[', ']', '{', '}', '\\' -> sb.append('\\')
+						.append(c);
+					default -> sb.append(c);
+				}
+			}
+			if (!hasWildcard) {
+				sb.append(".*");
+			}
+			return sb.toString();
 		}
 
 		void browseForLocation() {
@@ -414,27 +581,48 @@ public class NewWorkspaceWizard extends Wizard implements IImportWizard, INewWiz
 			if (dialog.open() == Window.OK) {
 				String selectedPath = dialog.getSelectedPath();
 				if (selectedPath != null && !selectedPath.isBlank()) {
+					URI uri;
+					try {
+						uri = toURI(selectedPath).normalize();
+					} catch (Exception e) {
+						model.error = "failed to add the index: " + e;
+						return;
+					}
+					String uriStr = uri.toString();
+					if (!loadingTemplateIndexes.add(uriStr)) {
+						model.error = "index is already being added: " + uriStr;
+						return;
+					}
 					Job job = Job.create("read " + selectedPath, mon -> {
 						try {
-							URI uri = toURI(selectedPath);
 							Result<List<TemplateInfo>> result = templates.read(uri.toURL());
 
 							if (result.isErr()) {
-								ui.write(() -> model.error = result.toString());
+								ui.write(() -> {
+									loadingTemplateIndexes.remove(uriStr);
+									model.error = result.toString();
+								});
 							} else {
-								result.unwrap()
-									.forEach(templates::add);
-								String uriStr = uri.toString();
+								List<TemplateInfo> indexTemplates = result.unwrap();
+								templates.removeAll(templateIndexes.getOrDefault(uriStr, Collections.emptyList()));
+								indexTemplates.forEach(templates::add);
+								templateIndexes.put(uriStr, indexTemplates);
 								BndPreferences prefs = new BndPreferences();
 								List<String> indexes = new ArrayList<>(prefs.getWorkspaceTemplateIndexes());
 								if (!indexes.contains(uriStr)) {
 									indexes.add(uriStr);
 									prefs.setWorkspaceTemplateIndexes(indexes);
 								}
-								ui.write(() -> model.templates = templates.getAvailableTemplates());
+								ui.write(() -> {
+									loadingTemplateIndexes.remove(uriStr);
+									model.templates = templates.getAvailableTemplates();
+								});
 							}
 						} catch (Exception e) {
-							ui.write(() -> model.error = "failed to add the index: " + e);
+							ui.write(() -> {
+								loadingTemplateIndexes.remove(uriStr);
+								model.error = "failed to add the index: " + e;
+							});
 						}
 					});
 					job.schedule();
